syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.restate.e2e.functions.coordinator";
option java_outer_classname = "CoordinatorProto";

import "google/protobuf/empty.proto";
import "dev/restate/ext.proto";

package coordinator;

service Coordinator {
  option (dev.restate.ext.service_type) = UNKEYED;

  rpc Sleep (Duration) returns (google.protobuf.Empty);
  rpc Proxy (google.protobuf.Empty) returns (ProxyResponse);
  rpc Complex (ComplexRequest) returns (ComplexResponse);
  rpc Timeout (Duration) returns (TimeoutResponse);
  rpc InvokeSequentially(InvokeSequentiallyRequest) returns (google.protobuf.Empty);
}

message Duration {
  uint64 millis = 1;
}

message ProxyResponse {
  string message = 1;
}

message ComplexRequest {
  Duration sleep_duration = 1;
  string request_value = 2;
}

message ComplexResponse {
  string response_value = 1;
}

message TimeoutResponse {
  bool timeout_occurred = 1;
}

message InvokeSequentiallyRequest {
  repeated bool execute_as_background_call = 1;
}
